--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     <h1 class="mb-4">Hi I am Kopano Molapo</h1>
     <h2 class="mb-4">Front-end developer,based in South Africa.</h2>
     <p class="mb-5">I am a Business Adiminstration(BBA) graduate, from late last year i have had interest in learning how to code not knowing where to start,but with the help of SheCodes programme the knowledge i have gained in months is incredible.at the current moment i have a part time job at Idependent Electoral Commisson as a Registration Officer.</p>
-    <a href="" class= "btn btn-branding">View my projects</a>
+    <a href="work.html" class= "btn btn-branding">View my projects</a>
     </div>
     </div>
     <div class="col-lg-6">
