--- a/work.html
+++ b/work.html
@@ -39,7 +39,7 @@
        </div>
        <div class="col-md-6 mb-4">
         <img src="images/landing-page.jpg" class="img-fluid mb-3 rounded" alt=""/>
-        <h3 class="text-center m-0">weather-app Project</h3>
+        <h3 class="text-center m-0">Landing-page Project</h3>
         <p class="text-center text-muted">Built with HTML and CSS </p>
      </div>
     </div>
