--- a/index.html
+++ b/index.html
@@ -77,12 +77,28 @@
           </div>
          </div>
       </div>
-         <footer class=" links-tab mb-5">
-            this project was coded by 
-             <a href="https://github.com/Kopano-Mo" traget="_blank">Kopano Molapo </a>and is 
-             <a href="https://github.com/Kopano-Mo/The-Weather-App-Project" target="_blank"> opend-source on GitHub</a> 
-             <a href="https://the-weather-project.netlify.app/" target="_blank"> hosted on Netify</a>
-     </footer>
-      
+   <footer>
+            <div class="contact-box justify-content-between mb-5 d-none d-md-flex ">
+            <div> 
+            <h4 > Work Inquiry</h4>
+            <p class="text-muted">Let's work together</p>
+            </div>
+            <div>
+           <a href="" class="btn btn-branding mt-3">Contact me </a>
+            </div>
+          </div>
+           <div class="d-flex justify-content-center mb-5">
+             <a href="mailto:kopimolapo@gmail.com" class="email-link">kopimolapo@gmail</a> 
+           </div>
+           <div class="social-links d-flex justify-content-center"> 
+             <a href="https://github.com/Kopano-Mo" target="_blank">
+            <i class="fa-brands fa-github"></i>
+            </a> 
+             <a href="https//www.linkedin.com/in/kopano-molapo" target="_blank">
+                <i class="fa-brands fa-linkedin"></i>
+             </a>
+            </div>
+         </footer>
+         </div>
 </body>
 </html>
