--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+       <meta name="description" content="Contact Kopano, Kopano is front-end developer based in South Africa"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>About Kopano Molapo</title>
+    <title>Contact - Kopano Molapo</title>
      </head>
      <body>
     <div class="content-container container">
@@ -37,5 +38,29 @@
     </p>
     </div>
     </div>
+        <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex ">
+      <div> 
+      <h3 > Work Inquiry</h3>
+      <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+     <a href="" class="btn btn-branding mt-3">Contact me </a>
+      </div>
+    </div>
+     <div class="d-flex justify-content-center mb-5">
+       <a href="mailto:kopimolapo@gmail.com" class="email-link">kopimolapo@gmail</a> 
+     </div>
+     <div class="social-links d-flex justify-content-center"> 
+       <a href="https://github.com/Kopano-Mo" target="_blank" title="Github Profile">
+      <i class="fa-brands fa-github"></i>
+      </a> 
+       <a href="https://www.linkedin.com/in/kopano-molapo-b8bb19128" target="_blank" title="Linkedin Profile">
+          <i class="fa-brands fa-linkedin"></i>
+       </a>
+      </div>
+      <p class="text-center mt-5">This project was coded by Kopano Molapo,and it is  <a href="https://github.com/Kopano-Mo/The-Portfolio-Project/tree/main" target="_blank">Open-sourced</a></p>
+   </footer>
+  </div>
      </body>
 </html>
