--- a/work.html
+++ b/work.html
@@ -20,7 +20,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css" />
-    <title>About Kopano Molapo</title>
+    <title>Kopano Molapo - Portfolio</title>
      </head>
      <body>
     <div class="content-container container">
@@ -28,22 +28,45 @@
     <h1 class="mb-4">Take a look at what I've been working on!</h1>
     <div class="row"> 
     <div class="col-md-6 mb-4">
-        <img src="images/portfolio-website.png" class="img-fluid mb-3 rounded " alt=""/>
+        <img src="images/portfolio-website.png" class="img-fluid mb-3 rounded " alt="portfolio-website project preview"/>
         <h3 class="text-center m-0">portfolio-website Project</h3>
         <p class="text-center text-muted">Built with HTML and CSS</p>
        </div>
        <div class="col-md-6 mb-4">
-        <img src="images/weather-app-project.png" class="img-fluid mb-3  rounded " alt=""/>
+        <img src="images/weather-app-project.png" class="img-fluid mb-3  rounded " alt="Weather project preview"/>
         <h3 class="text-center m-0">weather-app Project</h3>
         <p class="text-center text-muted">Built with HTML,CSS and Javascript</p>
        </div>
        <div class="col-md-6 mb-4">
-        <img src="images/landing-page.jpg" class="img-fluid mb-3 rounded" alt=""/>
+        <img src="images/landing-page.jpg" class="img-fluid mb-3 rounded" alt="landing-page project preview"/>
         <h3 class="text-center m-0">Landing-page Project</h3>
         <p class="text-center text-muted">Built with HTML and CSS </p>
      </div>
     </div>
     </div>
     </div>
+       <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex ">
+      <div> 
+      <h3 > Work Inquiry</h3>
+      <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+     <a href="/contact.html" class="btn btn-branding mt-3">Contact me </a>
+      </div>
+    </div>
+     <div class="d-flex justify-content-center mb-5">
+       <a href="mailto:kopimolapo@gmail.com" class="email-link">kopimolapo@gmail</a> 
+     </div>
+     <div class="social-links d-flex justify-content-center"> 
+       <a href="https://github.com/Kopano-Mo" target="_blank" title="Github Profile">
+      <i class="fa-brands fa-github"></i>
+      </a> 
+       <a href="https://www.linkedin.com/in/kopano-molapo-b8bb19128" target="_blank" title="Linkedin Profile">
+          <i class="fa-brands fa-linkedin"></i>
+       </a>
+      </div>
+      <p class="text-center mt-5">This project was coded by Kopano Molapo,and it is  <a href="https://github.com/Kopano-Mo/The-Portfolio-Project/tree/main" target="_blank">Open-sourced</a></p>
+   </footer>
    </body>
 </html>
