--- a/about.html
+++ b/about.html
@@ -34,9 +34,32 @@
     </div>
     </div>
     <div class="col-lg-6">
-    <img src="images/kp.jpg" class="img-fluid" alt=""/>
+    <img src="images/kopano.M.webp" class="img-fluid kopano-pic" alt=""/>
     </div>
     </div>
     </div>
     </body>
+   <footer class="container">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex ">
+      <div> 
+      <h3 > Work Inquiry</h3>
+      <p class="text-muted">Let's work together</p>
+      </div>
+      <div>
+     <a href="/contact.html" class="btn btn-branding mt-3">Contact me </a>
+      </div>
+    </div>
+     <div class="d-flex justify-content-center mb-5">
+       <a href="mailto:kopimolapo@gmail.com" class="email-link">kopimolapo@gmail</a> 
+     </div>
+     <div class="social-links d-flex justify-content-center"> 
+       <a href="https://github.com/Kopano-Mo" target="_blank" title="Github Profile">
+      <i class="fa-brands fa-github"></i>
+      </a> 
+       <a href="https://www.linkedin.com/in/kopano-molapo-b8bb19128" target="_blank" title="Linkedin Profile">
+          <i class="fa-brands fa-linkedin"></i>
+       </a>
+      </div>
+      <p class="text-center mt-5">This project was coded by Kopano Molapo,and it is  <a href="https://github.com/Kopano-Mo/The-Portfolio-Project/tree/main" target="_blank">Open-sourced</a></p>
+   </footer>
     </html>
