Update contact.html by adding the nav

--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,24 @@
     <title>Contact - Kopano Molapo</title>
      </head>
      <body>
+       <div class="container">
+        <nav class="d-flex justify-content-between">
+        <ul>
+        <li>
+        <a href="/" title="Homepage">Home</a>
+        </li>
+         <li>
+        <a href="/about.html" title="About Kopano">About</a>
+        </li>
+        <li>
+        <a href="/work.html" title="Kopano's work">Work</a>
+        </li>
+        <li  class="active">
+        <a href="/contact.html" title="Contact Kopano">Contact</a>
+        </li>
+        </ul>
+        </nav>
+        </div>
     <div class="content-container container">
     <div class="content">
     <h1 class="mb-4">Let's get in touch!</h1>
