--- a/work.html
+++ b/work.html
@@ -23,6 +23,24 @@
     <title>Kopano Molapo - Portfolio</title>
      </head>
      <body>
+       <div class="container">
+        <nav class="d-flex justify-content-between">
+        <ul>
+        <li>
+        <a href="/" title="Homepage">Home</a>
+        </li>
+         <li>
+        <a href="/about.html" title="About Kopano">About</a>
+        </li>
+        <li>
+        <a href="/work.html" title="Kopano's work">Work</a>
+        </li>
+        <li  class="active">
+        <a href="/contact.html" title="Contact Kopano">Contact</a>
+        </li>
+        </ul>
+        </nav>
+        </div>
     <div class="content-container container">
     <div class="content">
     <h1 class="mb-4">Take a look at what I've been working on!</h1>
