--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <p>Hello, I am</p>  
         <h1>Kopano Molapo</h1>
         <h2 class="m-5">Font-end developer based in South Africa</h2>
-      <a href="about.html#contact" class="btn btn-branding">Contact me </a>
+      <a href="/contact.html" class="btn btn-branding">Contact me </a>
       <a href="about.html" class="btn btn-branding">About me</a>
       </div>
       <p class=" text-center m-5"> These are my featured projects which are my best choice to show</p>
